[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "board_plugin",
]

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
board_plugin = {path = "board_plugin"}
bevy-inspector-egui = { version = "0.8", optional = true }

[dependencies.bevy]
version = "0.6"
features = ["render", "bevy_winit", "png"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.6"
default-features = false
# features = ["x11"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
strip = true

[package.metadata.bundle]
name = "Minesweeper"
identifier = "com.doe.exampleapplication"
version = "0.0.1"
resources = ["assets"]
copyright = "xx"
category = "game"
description = "minesweeper"
short_description = "minesweeper"
long_description = "minesweeper"
